# primitive-manifold-planner

./: .gitignore  README.md  example66_check.pyc.2719625210416  pyproject.toml  requirements.txt  ualization and route candidate selection
examples/: check_example66_robot_parity.py  collision_utilities.py  competing_3d_connectors.py  continuous_transfer_family.py  continuous_transfer_robot_pyvista_demo.py  example_61_complex_3d_multimodal_scene.py  example_62_3d_nominal_vs_realized_demo.py  example_63_planar3link_robot_transfer.py  example_65_continuous_transfer_family.py  example_66_1_three_dof_robot_pyvista.py  example_66_jointspace_planner.py  example_66_multimodal_graph_search.py  example_67_multimodal_graph_search_stress_test.py  intrinsic_multimodal_scene.py  jointspace_planner_utils.py  multimodal_graph_search.py  multimodal_graph_search_stress_test.py  robot_constraint_manifolds.py  run_experiments_serial_vs_parallel.py  serial_vs_parallel_obstacle_smoke.csv  serial_vs_parallel_results.csv  serial_vs_parallel_smoke.csv  three_dof_robot_pyvista_demo.py
experiments/: __init__.py  obstacle_sweep.py  serial_vs_parallel.py
manifolds/: __init__.py  robot.py
notes/: 05_thesis_method_roadmap.md  06_thesis_validation_checklist.md  07_codebase_architecture.md
outputs/: example_54_planner_v1_benchmark_export.csv  example_54_planner_v1_benchmark_export.json
planner/: jointspace_helpers.py  parallel_evidence_planner.py
scenes/: __init__.py  stress_scene.py
tests/: test_admissibility_models.py  test_bounded_manifold_local.py  test_bounded_transition_candidates.py  (+27 more)
(+134 files in other folders)
